refactor: 로그 추가 + 보내는 방식 변경